@@ -3,7 +3,7 @@
 # Initialization script normally executed in the interpreter for each
 # Tk-based application.  Arranges class bindings for widgets.
 #
-# RCS: @(#) $Id: tk.tcl,v 1.67 2007/10/26 15:23:05 dgp Exp $
+# RCS: @(#) $Id: tk.tcl,v 1.68 2007/10/30 19:08:15 dgp Exp $
 #
 # Copyright (c) 1992-1994 The Regents of the University of California.
 # Copyright (c) 1994-1996 Sun Microsystems, Inc.
@@ -17,7 +17,7 @@ package require Tcl 8.5	;# Guard against [source] in an 8.4- interp
 # Insist on running with compatible version of Tcl
 package require Tcl 8.5b1-8.6
 # Verify that we have Tk binary and script components from the same release
-package require -exact Tk  8.5b2
+package require -exact Tk  8.5b2.1
 
 # Create a ::tk namespace
 namespace eval ::tk {
