@@ -1,11 +1,11 @@
-# $Id: tk.spec,v 1.28 2007/10/26 15:23:06 dgp Exp $
+# $Id: tk.spec,v 1.29 2007/10/30 19:08:22 dgp Exp $
 # This file is the basis for a binary Tk Linux RPM.
 
 %{!?directory:%define directory /usr/local}
 
 Name:          tk
 Summary:       Tk graphical toolkit for the Tcl scripting language.
-Version:       8.5b2
+Version:       8.5b2.1
 Release:       2
 License:       BSD
 Group:         Development/Languages
